--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "com.dimeno.permission.sample"
+        applicationId "com.wangzhen.permission.sample"
         minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
